<resources>
    <string name="app_name">Bihar Bhoomika</string>
    <string name="app_icon">डी.बी.टी. सत्यापन</string>
    <string name="pm_kisan_ankshan">PM-किसान अंकेक्षण</string>
    <string name="farmer_Call_Verification_Title">उर्वरक उपलब्धता एवं बिक्री हेतु जाँच के लिए किसान की सूचि</string>
    <string name="pmkisan_phy_verification_Title">पी.एम.-किसान भौतिक सत्यापन</string>
    <string name="pmkisan_ac_verification_Title">पी.एम.-किसान आवेदन सत्यापन</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">होम</string>
    <string name="menu_Farmer_Verification">पंजीकरण सत्यापन</string>
    <string name="menu_Pkisan_Verification">पी.एम. किसान सत्यापन</string>
    <string name="menu_Pkisan_Recovery">पी.एम. किसान रिकवरी</string>
    <string name="menu_Input_Verification">कृषि इनपुट अनुदान सत्यापन</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_Mobileno">Mobile No.</string>
    <string name="prompt_RegNo">User Id</string>
    <string name="prompt_Name">Name</string>

    <string name="prompt_Panchayat">Panchayat</string>
    <string name="prompt_VillageName">Village</string>
    <string name="prompt_District">District</string>
    <string name="prompt_Block">Block</string>
    <string name="prompt_Yojna">Yojna</string>

    <string name="prompt_Otp">Password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remarks">Remarks</string>


    <string name="btn_verify_password">Verify Password</string>
    <string name="btn_resend_password">Resend Password</string>


    <string name="title_activity_login">Login</string>
    <string name="title_activity_my_profile">Profile</string>
    <string name="title_activity_score">Your Score</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_forgot_RegNo">Forgot Registration No.</string>


    <string name="picture_title">ProfilePic</string>
    <string name="picture_description">ProfilePic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="transaction_method">
        <item>SELECT</item>
        <item>By Farmer(Bank)</item>
    </string-array>


    <string name="sign_to_connect_with_us">Sign to connect with us</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget password ?</string>
    <string name="login">Login ( लॉगिन करें )</string>
    <string name="userid"> UserId ( यूजर आईडी )</string>
    <string name="pass"> Password ( पासवर्ड )</string>
    <string name="save">Save</string>

    <string name="name">Name</string>
    <string name="father_name">Farmer Name</string>
    <string name="gender">Gender</string>
    <string name="category">Category</string>
    <string name="qualification">Qualification</string>
    <string name="clg_school">College/School Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email_id">Email Id</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="save_details">Save Details</string>
    <string name="title_activity_feedback_question">FeedbackQuestionActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>